--- a/templates/layout/side_bar.html
+++ b/templates/layout/side_bar.html
@@ -12,7 +12,10 @@
   </div>
   <!-- Navigation Links Section -->
   <div class="nav-links mt-3">
-    <a href="{% url 'file-upload' %}"><i class="fa-solid fa-house me-2"></i> <span class="nav-link-name">File Upload</span></a>
+    <a href="{% url 'dasboard' %}"><i class="fa-solid fa-house me-2"></i> <span class="nav-link-name">File Upload</span></a>
+  </div>
+  <div class="nav-links mt-3">
+    <a href="#"><i class="fa-solid fa-house me-2"></i> <span class="nav-link-name">Payment</span></a>
   </div>
 
   <!-- Bottom Icon Section -->
